// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ranking golden (max-yield) > produces stable top-N ordering per scenario under max-yield 1`] = `
{
  "broad-generic": [
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "kotak-solitaire",
    "amex-membership-rewards",
    "amex-gold",
    "hdfc-marriott-bonvoy",
    "indusind-pioneer-legacy",
  ],
  "category-bill-payments": [
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-phonepe-ultimo",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "cheq-au",
    "hdfc-marriott-bonvoy",
    "indusind-pioneer-legacy",
    "sbi-card-prime",
    "indusind-eazydiner",
    "indigo-sbi-elite",
    "bpcl-sbi-octane",
  ],
  "category-education-payments": [
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "amex-membership-rewards",
    "indusind-pioneer-legacy",
    "amex-gold",
    "sc-ultimate",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "axis-atlas",
    "hsbc-premier",
    "hdfc-regalia-gold",
    "sbi-card-pulse",
  ],
  "category-rent": [
    "hsbc-premier",
    "hsbc-travelone",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "sc-ultimate",
    "amex-gold",
    "amex-smartearn",
    "axis-magnus-burgundy",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "hsbc-travelone",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "sc-ultimate",
    "amex-gold",
    "amex-smartearn",
    "axis-magnus-burgundy",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-utilities": [
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-phonepe-ultimo",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "cheq-au",
    "hdfc-marriott-bonvoy",
    "indusind-pioneer-legacy",
    "sbi-card-prime",
    "indusind-eazydiner",
    "indigo-sbi-elite",
    "bpcl-sbi-octane",
  ],
  "category-utility-bills": [
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-phonepe-ultimo",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "cheq-au",
    "hdfc-marriott-bonvoy",
    "indusind-pioneer-legacy",
    "sbi-card-prime",
    "indusind-eazydiner",
    "indigo-sbi-elite",
    "bpcl-sbi-octane",
  ],
  "combo-dining-under-5000": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-marriott-bonvoy",
    "yes-paisabazaar-paisasave",
    "hsbc-rupay-cashback",
    "indusind-eazydiner",
    "bobcard-eterna",
    "sbi-card-prime",
    "landmark-rewards-sbi-prime",
    "axis-fibe",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "sc-ultimate",
    "amex-platinum-travel",
    "equitas-powermiles",
    "idfc-mayura",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-airtel",
    "axis-horizon",
    "axis-cashback",
    "axis-indigo-premium",
    "axis-ace",
    "axis-flipkart",
    "axis-samsung-signature",
    "axis-fibe",
  ],
  "forex": [
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "equitas-powermiles",
    "hsbc-travelone",
    "bobcard-etihad-guest-premium",
    "hdfc-regalia-gold",
    "amex-membership-rewards",
    "indusind-pioneer-legacy",
    "axis-magnus-burgundy",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "kotak-solitaire",
    "au-ixigo",
    "idfc-mayura",
    "rbl-world-safari",
    "indusind-pioneer-heritage-metal",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "kotak-solitaire",
    "axis-magnus-burgundy",
    "yes-marquee",
    "axis-magnus",
    "kotak-white-reserve",
    "sc-beyond",
    "idfc-mayura",
    "axis-reserve",
  ],
  "intl-lounge-query": [
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "kotak-solitaire",
    "hdfc-marriott-bonvoy",
    "indusind-pioneer-legacy",
    "bobcard-etihad-guest-premium",
    "axis-magnus-burgundy",
  ],
  "issuer-amex": [
    "amex-membership-rewards",
    "amex-gold",
    "amex-platinum-travel",
    "amex-smartearn",
    "amex-platinum-reserve",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-atlas",
    "axis-flipkart-super-elite",
    "axis-magnus-burgundy",
    "axis-airtel",
    "axis-indigo-premium",
    "axis-cashback",
    "axis-magnus",
    "axis-flipkart",
    "axis-ace",
    "axis-samsung-signature",
    "axis-horizon",
    "axis-fibe",
  ],
  "issuer-hdfc": [
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-diners-club-black-metal",
    "hdfc-marriott-bonvoy",
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hdfc-diners-club-privilege",
    "hdfc-phonepe-ultimo",
    "hdfc-millennia",
    "hdfc-pixel-play",
    "hdfc-pixel-go",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-amazon-pay",
    "icici-times-black",
    "icici-adani-one-signature",
    "icici-adani-one-platinum",
    "icici-hpcl-super-saver",
    "icici-coral-rupay",
    "icici-coral",
    "icici-makemytrip",
    "icici-hpcl-coral",
    "icici-emeralde",
    "icici-sapphiro",
  ],
  "issuer-sbi": [
    "indigo-sbi-elite",
    "phonepe-sbi-select-black",
    "tata-neu-infinity-sbi",
    "flipkart-sbi",
    "titan-sbi",
    "sbi-card-prime",
    "sbi-cashback",
    "krisflyer-sbi-apex",
    "landmark-rewards-sbi-prime",
    "tata-neu-plus-sbi",
    "indigo-sbi",
    "sbi-card-pulse",
  ],
  "lifetime-free": [
    "csb-jupiter-edge-plus",
    "indusind-tiger",
    "yes-kiwi",
    "scapia-federal",
    "scapia-bobcard",
    "idfc-wow",
    "indusind-legend",
    "onecard",
    "au-ixigo",
    "indusind-platinum-rupay",
    "indusind-eazydiner-platinum",
    "icici-platinum-chip",
  ],
  "lounge": [
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hsbc-premier",
    "axis-atlas",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "kotak-solitaire",
    "hdfc-marriott-bonvoy",
    "indusind-pioneer-legacy",
    "bobcard-etihad-guest-premium",
  ],
  "lounge-query": [
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "kotak-solitaire",
    "hdfc-marriott-bonvoy",
    "indusind-pioneer-legacy",
    "bobcard-etihad-guest-premium",
    "axis-magnus-burgundy",
  ],
  "max-fee-5000-query": [
    "csb-jupiter-edge-plus",
    "indusind-tiger",
    "yes-kiwi",
    "icici-amazon-pay",
    "sbi-cashback",
    "hdfc-millennia",
    "axis-flipkart",
    "axis-ace",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "scapia-federal",
    "hdfc-swiggy-black",
  ],
  "max-fee-zero": [
    "csb-jupiter-edge-plus",
    "indusind-tiger",
    "yes-kiwi",
    "icici-amazon-pay",
    "scapia-federal",
    "scapia-bobcard",
    "idfc-wow",
    "indusind-legend",
    "onecard",
    "au-ixigo",
    "indusind-platinum-rupay",
    "indusind-eazydiner-platinum",
  ],
  "merchant-amazon": [
    "cheq-au",
    "icici-amazon-pay",
    "amex-smartearn",
    "hdfc-moneyback-plus",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "flipkart-sbi",
    "axis-flipkart",
    "cheq-au",
    "axis-samsung-signature",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "axis-airtel",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-diners-club-privilege",
    "axis-ace",
    "hsbc-rupay-cashback",
    "axis-fibe",
    "axis-rewards",
    "axis-select",
    "axis-my-zone",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "indusind-pioneer-legacy",
    "hdfc-swiggy",
    "sbi-card-prime",
    "hdfc-swiggy-black",
    "indigo-sbi-elite",
    "sbi-card-elite",
    "hdfc-swiggy-orange",
    "hdfc-millennia",
  ],
  "network-rupay": [
    "indigo-sbi-elite",
    "yes-kiwi",
    "kotak-white-reserve",
    "au-ixigo",
    "yes-reserv",
    "yes-pop-club",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
    "indigo-sbi",
    "hsbc-rupay-cashback",
  ],
  "network-visa": [
    "sc-priority-visa-infinite",
    "hsbc-visa-platinum",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-atlas",
    "hdfc-shoppers-stop-black",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
    "indusind-eazydiner",
    "axis-magnus-burgundy",
  ],
  "segment-beginner": [
    "csb-jupiter-edge-plus",
    "hdfc-swiggy",
    "hsbc-live-plus",
    "yes-kiwi",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "axis-airtel",
    "amex-smartearn",
    "hdfc-phonepe-ultimo",
    "cheq-au",
    "hdfc-millennia",
    "hdfc-diners-club-privilege",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "yes-marquee",
    "hdfc-marriott-bonvoy",
    "amex-membership-rewards",
    "hdfc-shoppers-stop-black",
    "indusind-eazydiner",
    "bobcard-eterna",
    "phonepe-sbi-select-black",
    "sbi-card-prime",
    "amex-gold",
    "titan-sbi",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "aurum-sbi",
    "krisflyer-sbi-apex",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "amex-platinum-reserve",
    "axis-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "kotak-solitaire",
    "amex-platinum-travel",
    "hdfc-marriott-bonvoy",
    "axis-magnus-burgundy",
    "sc-ultimate",
  ],
  "spend-high-base": [
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hsbc-premier",
    "axis-atlas",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "amex-membership-rewards",
    "hdfc-marriott-bonvoy",
    "bobcard-etihad-guest-premium",
  ],
  "spend-international": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "bobcard-etihad-guest-premium",
    "icici-emeralde-private-metal",
    "equitas-powermiles",
    "yes-marquee",
    "sc-ultimate",
    "icici-times-black",
    "kotak-solitaire",
    "hdfc-regalia-gold",
    "au-ixigo",
    "idfc-mayura",
  ],
  "spend-level-heavy": [
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "kotak-solitaire",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "hdfc-marriott-bonvoy",
  ],
  "spend-level-light": [
    "csb-jupiter-edge-plus",
    "hdfc-infinia-metal",
    "indusind-tiger",
    "yes-kiwi",
    "icici-amazon-pay",
    "sbi-cashback",
    "hdfc-millennia",
    "axis-flipkart",
    "axis-ace",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "hsbc-travelone",
  ],
  "spend-level-mid": [
    "csb-jupiter-edge-plus",
    "hdfc-infinia-metal",
    "indusind-tiger",
    "yes-kiwi",
    "icici-amazon-pay",
    "sbi-cashback",
    "hdfc-millennia",
    "axis-flipkart",
    "axis-ace",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "hsbc-travelone",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "kotak-solitaire",
    "hdfc-regalia-gold",
    "axis-atlas",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
    "bobcard-etihad-guest-premium",
    "amex-membership-rewards",
  ],
  "usecase-cashback": [
    "yes-kiwi",
    "icici-amazon-pay",
    "sbi-cashback",
    "hdfc-millennia",
    "axis-flipkart",
    "axis-ace",
    "hdfc-swiggy-black",
    "hdfc-swiggy",
    "hsbc-live-plus",
    "sc-smart",
    "yes-paisabazaar-paisasave",
    "sc-super-value-titanium",
  ],
  "usecase-dining": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-marriott-bonvoy",
    "yes-paisabazaar-paisasave",
    "hsbc-rupay-cashback",
    "indusind-eazydiner",
    "bobcard-eterna",
    "sbi-card-prime",
    "landmark-rewards-sbi-prime",
    "axis-fibe",
  ],
  "usecase-entertainment": [
    "hdfc-marriott-bonvoy",
    "hsbc-live-plus",
    "hdfc-diners-club-privilege",
    "sbi-card-prime",
    "landmark-rewards-sbi-prime",
    "hsbc-rupay-cashback",
    "bpcl-sbi-octane",
    "sbi-card-elite",
    "icici-coral",
    "bobcard-easy",
    "axis-my-zone",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "bpcl-sbi",
    "icici-hpcl-super-saver",
    "axis-indianoil-easy",
    "hdfc-indianoil",
    "kotak-cashback-plus",
    "icici-hpcl-coral",
    "idfc-first-power",
    "axis-indianoil",
    "axis-indianoil-premium",
    "sc-platinum-rewards",
  ],
  "usecase-grocery": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "rbl-patanjali-swarn",
    "axis-indigo-premium",
    "rbl-patanjali-vishisht",
    "kotak-cashback-plus",
    "hsbc-rupay-cashback",
    "sbi-card-prime",
    "sc-manhattan-platinum",
    "rbl-shoprite",
  ],
  "usecase-online": [
    "csb-jupiter-edge-plus",
    "axis-cashback",
    "indusind-pioneer-legacy",
    "phonepe-sbi-select-black",
    "sbi-cashback",
    "indusind-eazydiner",
    "kotak-cashback-plus",
    "bobcard-eterna",
    "hdfc-pixel-play",
    "cheq-au",
    "indusind-pinnacle",
    "axis-fibe",
  ],
  "usecase-travel": [
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hsbc-premier",
    "axis-atlas",
    "hdfc-diners-club-black-metal",
    "kotak-solitaire",
    "sc-ultimate",
    "amex-membership-rewards",
    "amex-gold",
    "hdfc-marriott-bonvoy",
  ],
  "usecase-upi": [
    "indigo-sbi-elite",
    "yes-kiwi",
    "kotak-white-reserve",
    "au-ixigo",
    "yes-reserv",
    "yes-pop-club",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
    "indigo-sbi",
    "hsbc-rupay-cashback",
  ],
}
`;

exports[`ranking golden (representative queries) > produces stable top-N ordering per scenario 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "bobcard-etihad-guest-premium",
    "icici-times-black",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "indusind-pioneer-legacy",
    "hdfc-marriott-bonvoy",
    "hdfc-phonepe-ultimo",
    "sc-ultimate",
    "phonepe-sbi-select-black",
    "amex-gold",
    "hdfc-indianoil",
    "indusind-eazydiner",
    "sbi-card-prime",
    "cheq-au",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "amex-membership-rewards",
    "indusind-pioneer-legacy",
    "indusind-eazydiner",
    "axis-atlas",
    "amex-gold",
    "hsbc-premier",
    "sc-ultimate",
    "hdfc-marriott-bonvoy",
    "hdfc-regalia-gold",
    "amex-platinum-travel",
  ],
  "category-rent": [
    "hsbc-premier",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "amex-smartearn",
    "axis-magnus-burgundy",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "amex-smartearn",
    "axis-magnus-burgundy",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "indusind-pioneer-legacy",
    "hdfc-marriott-bonvoy",
    "hdfc-phonepe-ultimo",
    "sc-ultimate",
    "phonepe-sbi-select-black",
    "amex-gold",
    "indusind-eazydiner",
    "sbi-card-prime",
    "cheq-au",
    "axis-ace",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "indusind-pioneer-legacy",
    "sbi-card-prime",
    "cheq-au",
    "axis-ace",
    "hdfc-marriott-bonvoy",
    "sc-super-value-titanium",
    "hdfc-phonepe-ultimo",
    "sc-ultimate",
    "icici-hpcl-super-saver",
    "phonepe-sbi-select-black",
  ],
  "combo-dining-under-5000": [
    "hdfc-swiggy",
    "hsbc-live-plus",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "yes-paisabazaar-paisasave",
    "hdfc-marriott-bonvoy",
    "indusind-eazydiner",
    "bobcard-eterna",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "landmark-rewards-sbi-prime",
    "yes-first-preferred",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "sc-ultimate",
    "amex-platinum-travel",
    "equitas-powermiles",
    "idfc-mayura",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-airtel",
    "axis-horizon",
    "axis-cashback",
    "axis-indigo-premium",
    "axis-ace",
    "axis-flipkart",
    "axis-samsung-signature",
    "axis-fibe",
  ],
  "forex": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "equitas-powermiles",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "axis-magnus",
    "icici-times-black",
    "yes-marquee",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "kotak-solitaire",
    "idfc-mayura",
    "au-ixigo",
    "indusind-pioneer-heritage-metal",
    "rbl-world-safari",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "sc-beyond",
    "idfc-mayura",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-magnus",
    "yes-marquee",
    "kotak-white-reserve",
    "kotak-solitaire",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-reserve",
    "icici-times-black",
    "sc-beyond",
    "aurum-sbi",
  ],
  "issuer-amex": [
    "amex-platinum-travel",
    "amex-gold",
    "amex-membership-rewards",
    "amex-platinum-reserve",
    "amex-smartearn",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-cashback",
    "axis-horizon",
    "axis-flipkart",
    "axis-samsung-signature",
    "axis-ace",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-airtel",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-tata-neu-infinity",
    "hdfc-phonepe-ultimo",
    "hdfc-shoppers-stop-black",
    "hdfc-millennia",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-adani-one-signature",
    "icici-amazon-pay",
    "icici-emeralde",
    "icici-adani-one-platinum",
    "icici-sapphiro",
    "icici-makemytrip",
    "icici-sapphiro-rupay",
    "icici-coral-rupay",
    "icici-coral",
    "icici-hpcl-coral",
  ],
  "issuer-sbi": [
    "krisflyer-sbi-apex",
    "titan-sbi",
    "tata-neu-infinity-sbi",
    "phonepe-sbi-select-black",
    "aurum-sbi",
    "indigo-sbi-elite",
    "sbi-card-miles-elite",
    "flipkart-sbi",
    "sbi-card-prime",
    "sbi-cashback",
    "sbi-card-elite",
    "sbi-card-miles-prime",
  ],
  "lifetime-free": [
    "csb-jupiter-edge-plus",
    "hsbc-visa-platinum",
    "yes-kiwi",
    "au-ixigo",
    "indusind-tiger",
    "axis-fibe",
    "hsbc-rupay-platinum",
    "yes-paisabazaar-paisasave-rupay",
    "axis-kwik",
    "federal-imperio",
    "federal-signet",
    "idfc-first-wealth",
  ],
  "lounge": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "sc-beyond",
    "hdfc-infinia-metal",
    "icici-times-black",
    "indusind-pioneer-heritage-metal",
  ],
  "lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "sc-beyond",
    "hdfc-infinia-metal",
    "icici-times-black",
    "indusind-pioneer-heritage-metal",
  ],
  "max-fee-5000-query": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
    "amex-platinum-travel",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "equitas-selfe",
    "cheq-au",
    "titan-sbi",
    "amex-membership-rewards",
  ],
  "max-fee-zero": [
    "kotak-solitaire",
    "yes-kiwi",
    "csb-jupiter-edge-plus",
    "hsbc-visa-platinum",
    "icici-amazon-pay",
    "au-ixigo",
    "indusind-tiger",
    "axis-fibe",
    "sc-priority-visa-infinite",
    "kotak-infinite",
    "hsbc-rupay-platinum",
    "yes-paisabazaar-paisasave-rupay",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "cheq-au",
    "hdfc-moneyback-plus",
    "amex-smartearn",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "axis-flipkart",
    "flipkart-sbi",
    "cheq-au",
    "axis-samsung-signature",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "axis-ace",
    "axis-fibe",
    "axis-airtel",
    "hsbc-rupay-cashback",
    "axis-rewards",
    "axis-my-zone",
    "axis-select",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "indusind-pioneer-legacy",
    "hdfc-swiggy",
    "sbi-card-prime",
    "hdfc-swiggy-black",
    "indigo-sbi-elite",
    "sbi-card-elite",
    "hdfc-swiggy-orange",
    "hdfc-millennia",
  ],
  "network-rupay": [
    "indigo-sbi-elite",
    "yes-kiwi",
    "kotak-white-reserve",
    "au-ixigo",
    "yes-reserv",
    "yes-pop-club",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
    "indigo-sbi",
    "hsbc-rupay-cashback",
  ],
  "network-visa": [
    "sc-priority-visa-infinite",
    "hsbc-visa-platinum",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-atlas",
    "hdfc-shoppers-stop-black",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
    "indusind-eazydiner",
    "axis-magnus-burgundy",
  ],
  "segment-beginner": [
    "csb-jupiter-edge-plus",
    "hdfc-swiggy",
    "hsbc-live-plus",
    "yes-kiwi",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "axis-airtel",
    "amex-smartearn",
    "hdfc-phonepe-ultimo",
    "cheq-au",
    "hdfc-millennia",
    "hdfc-diners-club-privilege",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "yes-marquee",
    "hdfc-marriott-bonvoy",
    "amex-membership-rewards",
    "hdfc-shoppers-stop-black",
    "indusind-eazydiner",
    "bobcard-eterna",
    "phonepe-sbi-select-black",
    "sbi-card-prime",
    "amex-gold",
    "titan-sbi",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "aurum-sbi",
    "krisflyer-sbi-apex",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "amex-platinum-reserve",
    "axis-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "kotak-solitaire",
    "amex-platinum-travel",
    "hdfc-marriott-bonvoy",
    "axis-magnus-burgundy",
    "sc-ultimate",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "axis-atlas",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "indusind-tiger",
  ],
  "spend-international": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "bobcard-etihad-guest-premium",
    "icici-emeralde-private-metal",
    "equitas-powermiles",
    "yes-marquee",
    "sc-ultimate",
    "icici-times-black",
    "kotak-solitaire",
    "hdfc-regalia-gold",
    "au-ixigo",
    "idfc-mayura",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "bobcard-etihad-guest-premium",
  ],
  "spend-level-light": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "kotak-white-reserve",
    "yes-marquee",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "kotak-white-reserve",
    "yes-marquee",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "hsbc-visa-platinum",
  ],
  "usecase-cashback": [
    "titan-sbi",
    "axis-cashback",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "axis-flipkart",
    "flipkart-sbi",
    "sbi-cashback",
    "axis-samsung-signature",
    "yes-paisabazaar-paisasave",
    "axis-ace",
  ],
  "usecase-dining": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-marriott-bonvoy",
    "yes-paisabazaar-paisasave",
    "indusind-eazydiner",
    "bobcard-eterna",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "landmark-rewards-sbi-prime",
    "yes-first-preferred",
  ],
  "usecase-entertainment": [
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "sbi-card-prime",
    "sbi-card-elite",
    "bpcl-sbi-octane",
    "landmark-rewards-sbi-prime",
    "hsbc-rupay-cashback",
    "icici-coral",
    "axis-my-zone",
    "bobcard-easy",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "kotak-cashback-plus",
    "icici-hpcl-super-saver",
    "icici-hpcl-coral",
    "bpcl-sbi",
    "axis-indianoil",
    "axis-indianoil-easy",
    "hdfc-indianoil",
    "axis-indianoil-premium",
    "idfc-first-power",
    "sc-platinum-rewards",
  ],
  "usecase-grocery": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "rbl-patanjali-swarn",
    "sbi-card-prime",
    "kotak-cashback-plus",
    "rbl-patanjali-vishisht",
    "axis-indigo-premium",
    "sc-manhattan-platinum",
    "hsbc-rupay-cashback",
    "hdfc-moneyback-plus",
  ],
  "usecase-online": [
    "csb-jupiter-edge-plus",
    "axis-cashback",
    "sbi-cashback",
    "indusind-pioneer-legacy",
    "phonepe-sbi-select-black",
    "indusind-eazydiner",
    "hdfc-pixel-play",
    "bobcard-eterna",
    "kotak-cashback-plus",
    "cheq-au",
    "phonepe-sbi-purple",
    "simplyclick-sbi",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
  ],
  "usecase-upi": [
    "indigo-sbi-elite",
    "yes-kiwi",
    "kotak-white-reserve",
    "au-ixigo",
    "yes-reserv",
    "yes-pop-club",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
    "indigo-sbi",
    "hsbc-rupay-cashback",
  ],
}
`;
